--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/green"
-        tools:context=".MainActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nameAux"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark">
+
+
+    <ImageView
+        android:id="@+id/profile"
+        android:layout_width="194dp"
+        android:layout_height="168dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="93dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/user" />
+
     <TextView
-            android:text="@string/access_register"
-            android:layout_width="93dp"
-            android:layout_height="18dp" android:id="@+id/textview_registerLogin"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView6"
-            app:layout_constraintHorizontal_bias="0.113" app:layout_constraintTop_toBottomOf="@+id/button_login"
-            android:layout_marginTop="36dp"
-            android:textColor="@color/white" android:onClick="sendToRegister"/>
+        android:id="@+id/txtnameaux"
+        android:layout_width="189dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="66dp"
+        android:layout_marginEnd="145dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile" />
+
     <TextView
-            android:text="@string/request_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView3"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.202" android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"/>
-    <EditText
-            android:layout_width="289dp"
-            android:layout_height="41dp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/editTextTextEmailAddress"
-            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="52dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.491"/>
-    <EditText
-            android:layout_width="286dp"
-            android:layout_height="42dp"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/editTextTextPassword"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" android:layout_marginTop="36dp"
-            app:layout_constraintHorizontal_bias="0.48"/>
+        android:id="@+id/txtmailAux"
+        android:layout_width="193dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="143dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtnameaux" />
+
     <TextView
-            android:text="@string/app_name"
-            android:layout_width="279dp"
-            android:layout_height="49dp" android:id="@+id/textView"
-            android:textSize="36sp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="96dp" app:layout_constraintHorizontal_bias="0.628"
-            android:textColor="@color/white"/>
+        android:id="@+id/txtPassAux"
+        android:layout_width="181dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="147dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtmailAux" />
+
     <TextView
-            android:text="@string/request_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView2"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.179" android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"/>
-    <Button
-            android:text="@string/login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button_login"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" android:layout_marginTop="16dp"
-            app:layout_constraintHorizontal_bias="0.498"/>
-    <TextView
-            android:text="@string/forgot_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textview_forgotPasswordLogin"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/textView6"
-            app:layout_constraintHorizontal_bias="0.833" app:layout_constraintTop_toBottomOf="@+id/button_login"
-            android:layout_marginTop="36dp"
-            android:textColor="@color/white"/>
-    <TextView
-            android:text="|"
-            android:layout_width="12dp"
-            android:layout_height="26dp" android:id="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/button_login"
-            android:layout_marginTop="36dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@color/white"/>
+        android:id="@+id/txtUsernameAux"
+        android:layout_width="187dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="141dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPassAux" />
 </androidx.constraintlayout.widget.ConstraintLayout>
