se agregaron las funciones del login y del forgot password completas

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,12 +25,10 @@
         android:layout_width="302dp"
         android:layout_height="48dp"
         android:layout_marginStart="55dp"
-        android:layout_marginLeft="55dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="55dp"
-        android:layout_marginRight="55dp"
         android:ems="10"
-        android:hint="Enter Email"
+        android:hint="Enter Email or Username"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
