--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -43,7 +43,7 @@
                 android:layout_height="40dp" android:id="@+id/minusButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/productDetailPrice" android:layout_marginTop="12dp"
-                android:background="@drawable/round_button"
+                android:background="@drawable/rounded_button"
                 android:layout_marginStart="32dp"/>
         <Button
                 android:text="+"
@@ -51,7 +51,7 @@
                 android:layout_height="40dp" android:id="@+id/plusButton"
                 app:layout_constraintStart_toEndOf="@+id/productQuantityText" android:layout_marginTop="12dp"
                 app:layout_constraintTop_toBottomOf="@+id/productDetailPrice" android:layout_marginStart="24dp"
-                android:background="@drawable/round_button"
+                android:background="@drawable/rounded_button"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
         <TextView
                 android:text="1"
@@ -65,7 +65,7 @@
                 android:layout_width="149dp"
                 android:layout_height="40dp" android:id="@+id/button3"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/plusButton"
-                android:background="@drawable/round_button"
+                android:background="@drawable/rounded_button"
                 app:layout_constraintHorizontal_bias="0.588"
                 app:layout_constraintTop_toBottomOf="@+id/productPhotosCarousel"
                 android:layout_marginTop="80dp"/>
