--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/fragment_container" android:layout_marginTop="60dp">
+            android:id="@+id/fragment_container">
 
     </FrameLayout>
 
