--- a/app/src/main/res/layout/fragment_list_product.xml
+++ b/app/src/main/res/layout/fragment_list_product.xml
@@ -7,6 +7,6 @@
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/productRecyclerView"/>
+            android:layout_height="match_parent" android:id="@+id/productRecyclerView"/>
 
 </FrameLayout>
