--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -35,6 +35,7 @@
                 android:text="Add"
                 android:layout_width="88dp"
                 android:layout_height="43dp" android:id="@+id/addCategoryButton"
+                android:background="@drawable/rounded_button"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/categorySpinner"
                 app:layout_constraintTop_toBottomOf="@+id/productPriceTextView" android:layout_marginTop="32dp"
                 app:layout_constraintHorizontal_bias="0.654"/>
@@ -42,16 +43,23 @@
                 android:text="Save"
                 android:layout_width="85dp"
                 android:layout_height="41dp" android:id="@+id/saveProductButton"
+                android:background="@drawable/rounded_button"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.542" app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
-                android:layout_marginTop="28dp"/>
-        <Button
-                android:text="Delete Category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/deleteCategoryButton"
+                app:layout_constraintTop_toBottomOf="@+id/selectImageButton" android:layout_marginTop="80dp"/>
+        <ImageButton
+                android:src="@drawable/baseline_add_photo_alternate_black_36dp"
+                android:background="@drawable/rounded_button"
+                android:layout_width="75dp"
+                android:layout_height="71dp" android:id="@+id/selectImageButton"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.557"
-                app:layout_constraintTop_toBottomOf="@+id/saveProductButton" android:layout_marginTop="20dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/categorySpinner" android:layout_marginTop="44dp"
+                app:layout_constraintHorizontal_bias="0.497"/>
+        <ImageView
+                android:layout_width="169dp"
+                android:layout_height="152dp" tools:src="@tools:sample/avatars" android:id="@+id/productImageView"
+                android:visibility="visible" android:clickable="false" android:baselineAlignBottom="false"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/categorySpinner" android:layout_marginTop="28dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
