--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
             android:id="@+id/nav_category"
-            android:name="com.example.proyectofinal.ui.gallery.GalleryFragment"
+            android:name="com.example.proyectofinal.fragments.category.ListCategoryFragment"
             android:label="@string/app_name"
-            tools:layout="@layout/fragment_gallery"/>
+            tools:layout="@layout/fragment_list_category"/>
 
     <fragment
             android:id="@+id/nav_product"
