--- a/app/src/main/res/layout/caritem_row.xml
+++ b/app/src/main/res/layout/caritem_row.xml
@@ -2,54 +2,68 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+                                   android:layout_height="wrap_content">
 
 
+    <ImageView
+            android:layout_width="122dp"
+            android:layout_height="130dp"
+            android:id="@+id/carItemImage"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="14dp"/>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
-                android:id="@+id/carItemImage" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
-                android:layout_marginStart="8dp"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/carItemDescriptionText"
-                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/carItemImage"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                 android:layout_marginBottom="22dp" app:layout_constraintBottom_toTopOf="@+id/carItemPriceText"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="152dp"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/carItemPriceText"
-                android:textSize="18sp" android:layout_marginStart="16dp"
-                app:layout_constraintStart_toEndOf="@+id/carItemImage" android:layout_marginTop="42dp"
-                app:layout_constraintTop_toBottomOf="@+id/carItemDescriptionText"/>
+                android:textSize="18sp"
+                android:layout_marginTop="42dp"
+                app:layout_constraintTop_toBottomOf="@+id/carItemDescriptionText"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="152dp"/>
         <Button
                 android:text="-"
                 android:layout_width="30dp"
-                android:layout_height="40dp" android:id="@+id/carMinusButton"
-                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/carItemImage"
-                android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/carItemPriceText"/>
+                android:layout_height="40dp"
+                android:background="@drawable/rounded_button" android:id="@+id/carMinusButton"
+                android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/carItemPriceText"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="152dp"/>
         <Button
                 android:text="+"
                 android:layout_width="30dp"
-                android:layout_height="40dp" android:id="@+id/carPlusButton"
+                android:layout_height="40dp"
+                android:background="@drawable/rounded_button" android:id="@+id/carPlusButton"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="118dp" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toEndOf="@+id/carQuantityText"/>
         <TextView
                 android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/carQuantityText"
+                android:layout_width="42dp"
+                android:layout_height="25dp" android:id="@+id/carQuantityText"
                 android:textSize="18sp" android:layout_marginStart="14dp"
                 app:layout_constraintStart_toEndOf="@+id/carMinusButton" android:layout_marginTop="26dp"
-                app:layout_constraintTop_toBottomOf="@+id/carItemPriceText" app:layout_constraintEnd_toStartOf="@+id/carPlusButton"
+                app:layout_constraintTop_toBottomOf="@+id/carItemPriceText"
+                app:layout_constraintEnd_toStartOf="@+id/carPlusButton"
                 android:layout_marginEnd="16dp"/>
+        <Button
+                android:text="@string/button_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_button" android:id="@+id/carDeleteButton"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toEndOf="@+id/carPlusButton" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="112dp" android:layout_marginEnd="23dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
