--- a/app/src/main/res/layout/fragment_update_delete_product.xml
+++ b/app/src/main/res/layout/fragment_update_delete_product.xml
@@ -38,21 +38,24 @@
         <Button
                 android:text="Add"
                 android:layout_width="88dp"
-                android:layout_height="43dp" android:id="@+id/addCategoryButton"
+                android:layout_height="43dp"
+                android:background="@drawable/rounded_button" android:id="@+id/addCategoryButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/productPriceTextView" android:layout_marginTop="36dp"
                 android:layout_marginEnd="28dp"/>
         <Button
                 android:text="Update"
                 android:layout_width="162dp"
-                android:layout_height="46dp" android:id="@+id/updateProductButton"
+                android:layout_height="46dp"
+                android:background="@drawable/rounded_button" android:id="@+id/updateProductButton"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/deleteProductButton"
                 app:layout_constraintTop_toBottomOf="@+id/categorySpinner" android:layout_marginTop="32dp"
                 app:layout_constraintHorizontal_bias="0.565"/>
         <Button
                 android:text="Delete"
                 android:layout_width="152dp"
-                android:layout_height="48dp" android:id="@+id/deleteProductButton"
+                android:layout_height="48dp"
+                android:background="@drawable/rounded_button" android:id="@+id/deleteProductButton"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="28dp"
                 app:layout_constraintTop_toBottomOf="@+id/categorySpinner" android:layout_marginTop="32dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
