--- a/app/src/main/res/layout/fragment_add_category.xml
+++ b/app/src/main/res/layout/fragment_add_category.xml
@@ -12,10 +12,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="Name"
                 android:ems="10"
                 android:id="@+id/txtCategoryName"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="81dp"/>
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="120dp"
+                android:hint="@string/CategoryName"/>
+        <Button
+                android:text="@string/AddImage"
+                android:layout_width="wrap_content"
+                android:layout_height="37dp" android:id="@+id/btn_selectCategoryImage"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_category_preview" android:layout_marginTop="50dp"/>
+        <ImageView
+                android:src="@drawable/baseline_add_photo_alternate_black_36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/img_category_preview"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtCategoryName" android:layout_marginTop="20dp"/>
+        <Button
+                android:text="@string/Save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/btnSaveCategory"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_selectCategoryImage" android:layout_marginTop="100dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
