--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,8 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/mobile_navigation"
-            app:startDestination="@+id/nav_home">
+            app:startDestination="@+id/nav_home"
+    tools:ignore="UnusedNavigation">
 
     <fragment
             android:id="@+id/nav_home"
@@ -23,5 +24,10 @@
             android:label="@string/app_name"
             tools:layout="@layout/fragment_list_product"/>
 
+    <fragment
+        android:id="@+id/menu_Profile"
+        android:name="com.example.proyectofinal.fragments.profile.profileFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_list_product"/>
 
 </navigation>
