--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -9,6 +9,15 @@
             android:layout_height="match_parent">
 
         <EditText
+                android:layout_width="353dp"
+                android:layout_height="48dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/productDescriptionTextView"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:hint="Enter description"
+                android:layout_marginTop="23dp" app:layout_constraintTop_toBottomOf="@+id/productPriceTextView"/>
+        <EditText
                 android:layout_width="355dp"
                 android:layout_height="46dp"
                 android:inputType="textPersonName"
@@ -29,16 +38,16 @@
         <Spinner
                 android:layout_width="214dp"
                 android:layout_height="38dp" android:id="@+id/categorySpinner"
-                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/productPriceTextView"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"/>
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
+                android:layout_marginTop="33dp" app:layout_constraintTop_toBottomOf="@+id/productDescriptionTextView"/>
         <Button
                 android:text="Add"
                 android:layout_width="88dp"
                 android:layout_height="43dp" android:id="@+id/addCategoryButton"
                 android:background="@drawable/rounded_button"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/categorySpinner"
-                app:layout_constraintTop_toBottomOf="@+id/productPriceTextView" android:layout_marginTop="32dp"
-                app:layout_constraintHorizontal_bias="0.654"/>
+                app:layout_constraintHorizontal_bias="0.636" android:layout_marginTop="28dp"
+                app:layout_constraintTop_toBottomOf="@+id/productDescriptionTextView"/>
         <Button
                 android:text="Save"
                 android:layout_width="85dp"
