--- a/app/src/main/res/layout/fragment_list_category.xml
+++ b/app/src/main/res/layout/fragment_list_category.xml
@@ -14,5 +14,12 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="50dp" android:id="@+id/category_list"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:src="@drawable/baseline_add_white_18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true" android:id="@+id/flt_addCategory"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
