--- a/app/src/main/res/layout/caritem_row.xml
+++ b/app/src/main/res/layout/caritem_row.xml
@@ -45,11 +45,11 @@
                 android:layout_height="40dp"
                 android:background="@drawable/rounded_button" android:id="@+id/carPlusButton"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="118dp" android:layout_marginStart="16dp"
-                app:layout_constraintStart_toEndOf="@+id/carQuantityText"/>
+                android:layout_marginTop="118dp"
+                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/carQuantityText"/>
         <TextView
                 android:text="TextView"
-                android:layout_width="42dp"
+                android:layout_width="wrap_content"
                 android:layout_height="25dp" android:id="@+id/carQuantityText"
                 android:textSize="18sp" android:layout_marginStart="14dp"
                 app:layout_constraintStart_toEndOf="@+id/carMinusButton" android:layout_marginTop="26dp"
