--- a/app/src/main/res/layout/fragment_update_delete_category.xml
+++ b/app/src/main/res/layout/fragment_update_delete_category.xml
@@ -13,33 +13,35 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editTextTextPersonName3"
+                android:id="@+id/txtUpdateCategory"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="120dp"
                 android:hint="@string/CategoryName"/>
         <ImageView
                 android:src="@drawable/baseline_add_photo_alternate_black_36dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/imageView3"
+                android:layout_width="70dp"
+                android:layout_height="70dp" android:id="@+id/imgUpdateCategory"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" android:layout_marginTop="20dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/txtUpdateCategory" android:layout_marginTop="20dp"/>
         <Button
                 android:text="@string/ChangeImage"
                 android:layout_width="wrap_content"
-                android:layout_height="37dp" android:id="@+id/button"
+                android:layout_height="37dp" android:id="@+id/btnChangeImage"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginTop="50dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/imgUpdateCategory" android:layout_marginTop="50dp"/>
         <Button
                 android:text="@string/button_update"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/button3" tools:layout_editor_absoluteY="410dp"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/button4"
-                app:layout_constraintHorizontal_bias="0.5"/>
+                android:layout_height="wrap_content" android:id="@+id/btnUpdateCategory"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/btnBorrarCategoria"
+                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/btnChangeImage"
+                android:layout_marginTop="60dp"/>
         <Button
                 android:text="@string/button_delete"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/button4" tools:layout_editor_absoluteY="410dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/button3"
-                app:layout_constraintHorizontal_bias="0.5"/>
+                android:layout_height="wrap_content" android:id="@+id/btnBorrarCategoria"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/btnUpdateCategory"
+                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/btnChangeImage"
+                android:layout_marginTop="60dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
